--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-APP_NAME=Laravel
+APP_NAME="Mobil Online"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+ASSET_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
